sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:14: error: type mismatch;
 found   : Boolean
 required: Int
        case ROUGE => if(getCouleur(lgr-rouge-1 != ROUGE)){echange(i,lgr-rouge-1)}; rouge += 1;
                                                ^